<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".QuizRezults">

    <TextView
        android:id="@+id/rezultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/rezult"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <LinearLayout
        android:id="@+id/rezultLayout"
    android:layout_below="@id/rezultText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/opros_vopros"
    android:layout_centerHorizontal="true"
    android:layout_marginTop = "10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/rezultText"

        >
        <TextView
            android:id="@+id/correctansv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Верные ответы: 0"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:fontFamily="@font/font"
            />

        <TextView
            android:id="@+id/damn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            android:gravity="center"
            android:text="@string/damn"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incorrectansv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Неверные ответы: 0"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:fontFamily="@font/font"
            />

    </LinearLayout>

    <Button
        android:id="@+id/again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/start_button"
        android:text="@string/playagain"
        android:fontFamily="@font/font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>